crates/rspyts-macros/tests/ui/method_named_drop.stderr
error: method name `drop` collides with the generated `rspyts_cls__{Type}__drop` symbol; rename the method
  --> tests/ui/method_named_drop.rs:12:12
   |
12 |     pub fn drop(&self) {}
   |            ^^^^

error: `constructor` does not apply to this item; it marks the constructor method inside a #[bridge] impl block
 --> tests/ui/method_named_drop.rs:7:14
  |
7 |     #[bridge(constructor)]
  |              ^^^^^^^^^^^
